--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Purchase</h1>
+      <h1 class="project-name">采购流程指南</h1>
       <h2 class="project-tagline">Cost one&#39;s time to save your time</h2>
       <a href="https://github.com/bnuzet/purchase" class="btn">View on GitHub</a>
       <a href="https://github.com/bnuzet/purchase/zipball/master" class="btn">Download .zip</a>
