--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">采购流程指南</h1>
-      <h2 class="project-tagline">Cost ones time to save your time &quot;Don&#39;t waste your time on routine that doesn't value it.&quot; </h2>
+      <h2 class="project-tagline">&quot;Don&#39;t waste your time on routine that doesn't value it.&quot; </h2>
       <a href="https://github.com/bnuzet/purchase" class="btn">View on GitHub</a>
       <a href="https://github.com/bnuzet/purchase/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/bnuzet/purchase/tarball/master" class="btn">Download .tar.gz</a>
