--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="zh">
   <head>
     <meta charset="UTF-8">
     <title>采购流程指南__BNUZET</title>
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">采购流程指南</h1>
-      <h2 class="project-tagline">&quot;Don&#39;t waste your time on routine that doesn't value it.&quot; </h2>
+      <h2 class="project-tagline">&quot;Do not waste your time on routine that doesn't value it.&quot; </h2>
       <a href="https://github.com/bnuzet/purchase" class="btn">View on GitHub</a>
       <a href="https://github.com/bnuzet/purchase/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/bnuzet/purchase/tarball/master" class="btn">Download .tar.gz</a>
