--- a/equipa.html
+++ b/equipa.html
@@ -2,7 +2,7 @@
 <html lang="zh">
   <head>
     <meta charset="UTF-8">
-    <title>采购流程指南__BNUZET</title>
+    <title>[1.5, 30)万元设备的采购</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -12,10 +12,6 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">采购流程指南</h1>
-      <h2 class="project-tagline">&quot;Do not waste your time on routine that doesn't value it.&quot; </h2>
-      <a href="https://github.com/bnuzet/purchase" class="btn">View on GitHub</a>
-      <a href="https://github.com/bnuzet/purchase/zipball/master" class="btn">[1.5, 30)万元设备的采购</a>
-      <a href="https://github.com/bnuzet/purchase/tarball/master" class="btn">家具的采购</a>
     </section>
 
     <section class="main-content">
