--- a/equipa.html
+++ b/equipa.html
@@ -70,26 +70,27 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">采购流程指南</h1>
+      <h3 class="project-name">[1.5, 30)万元设备的采购</h3>
     </section>
 
     <section class="main-content">
       <div><textarea id="code" style="width: 100%;" rows="11">
-st=>start: Start|past:>http://www.google.com[blank]
-e=>end: Ende:>http://www.google.com
-op1=>operation: My Operation|past
-op2=>operation: Stuff|current
-sub1=>subroutine: My Subroutine|invalid
-cond=>condition: Yes
-or No?|approved:>http://www.google.com
-c2=>condition: Good idea|rejected
-io=>inputoutput: catch something...|request
+        st=>start: [1.5, 30)万元设备的采购|past:>http://www.google.com[blank]
+        e=>end: 结束:>http://www.google.com
+        op1=>operation: 竞价网竞价购买|past:>http://ztb.bnuz.edu.cn
+        op2=>operation: Stuff|current
+        sub1=>subroutine: My Subroutine|invalid
+        cond=>condition: Yes
+        or No?|approved:>http://www.google.com
+        c2=>condition: Good idea|rejected
+        io=>inputoutput: catch something...|request
 
-st->op1(right)->cond
-cond(yes, right)->c2
-cond(no)->sub1(left)->op1
-c2(yes)->io->e
-c2(no)->op2->e
+        st->op1(right)->cond
+        cond(yes, right)->c2
+        cond(no)->sub1(left)->op1
+        c2(yes)->io->e
+        c2(no)->op2->e
+        
         </textarea></div>
         <div><button id="run" type="button">Run</button></div>
         <div id="canvas"></div>
