--- a/equipa.html
+++ b/equipa.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <title>[1.5, 30)万元设备的采购</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--For flow chart-->
+<!--For flow chart-->
+    <style type="text/css">
+          .end-element { background-color : #FFCCFF; }
+    </style>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://flowchart.js.org/flowchart-latest.js"></script>
-    <!--/ For flow chart-->
+<!--/ For flow chart-->
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
