--- a/equipa.html
+++ b/equipa.html
@@ -84,7 +84,7 @@
         e=>end: 结束:>http://www.google.com
         op1=>operation: 竞价采购|past
         op2=>operation: Stuff|current
-        sub1=>subroutine: 固定资产申报|invalid
+        sub1=>subroutine: fdsakl|invalid
         cond=>condition: Yes
         or No?|approved:>http://www.google.com
         c2=>condition: Good idea|rejected
