--- a/equipa.html
+++ b/equipa.html
@@ -80,9 +80,9 @@
 
     <section class="main-content">
       <div><textarea id="code" style="width: 100%;" rows="11">
-        st=>start: [1.5, 30)万元设备的采购|past:>http://www.google.com[blank]
+        st=>start: fadfadfdaf|past:>http://www.google.com[blank]
         e=>end: 结束:>http://www.google.com
-        op1=>operation: 竞价采购|past
+        op1=>operation:dfadafd|past
         op2=>operation: Stuff|current
         sub1=>subroutine: fdsakl|invalid
         cond=>condition: Yes
