--- a/equipa.html
+++ b/equipa.html
@@ -81,7 +81,7 @@
     <section class="main-content">
       <div><textarea id="code" style="width: 100%;" rows="11">
         st=>start: fadfadfdaf|past:>http://www.google.com[blank]
-        e=>end: 结束:>http://www.google.com
+        e=>end:fdasfd:>http://www.google.com
         op1=>operation:dfadafd|past
         op2=>operation: Stuff|current
         sub1=>subroutine: fdsakl|invalid
