--- a/equipa.html
+++ b/equipa.html
@@ -82,7 +82,7 @@
       
       <div><textarea id="code" style="width: 100%;" rows="11">
 st=>start: 开始|past:>http://www.google.com[blank]
-e=>end: Ende:>http://www.google.com
+e=>end: 结束:>http://www.google.com
 op1=>operation: My Operation|past
 op2=>operation: Stuff|current
 sub1=>subroutine: My Subroutine|invalid
