--- a/equipa.html
+++ b/equipa.html
@@ -81,7 +81,7 @@
     <section class="main-content">
       
       <div><textarea id="code" style="width: 100%;" rows="11">
-st=>start: 开始|past:>http://www.google.com[blank]
+st=>start: [1.5, 30)万元设备的采购|past:>http://www.google.com[blank]
 e=>end: 结束:>http://www.google.com
 op1=>operation: My Operation|past
 op2=>operation: Stuff|current
