--- a/equipa.html
+++ b/equipa.html
@@ -75,7 +75,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h3 class="project-name">[1.5, 30)万元设备的采购</h3>
+      <h3>[1.5, 30)万元设备的采购</h3>
     </section>
 
     <section class="main-content">
