--- a/equipa.html
+++ b/equipa.html
@@ -75,7 +75,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h3>[1.5, 30)万元设备的采购</h3>
+      <h2>[1.5, 30)万元设备的采购</h2>
     </section>
 
     <section class="main-content">
@@ -83,7 +83,7 @@
       <div><textarea id="code" style="width: 100%;" rows="11">
 st=>start: [1.5, 30)万元设备的采购|past:>http://www.google.com[blank]
 e=>end: 结束:>http://www.google.com
-op1=>operation: My Operation|past
+op1=>operation: 上竞价网|past
 op2=>operation: Stuff|current
 sub1=>subroutine: My Subroutine|invalid
 cond=>condition: Yes
