--- a/equipa.html
+++ b/equipa.html
@@ -85,7 +85,7 @@ st=>start: [1.5, 30)万元设备的采购|past:>http://www.google.com[blank]
 e=>end: 结束:>http://www.google.com
 op1=>operation: 上竞价网|past
 op2=>operation: Stuff|current
-sub1=>subroutine: My Subroutine|invalid
+sub1=>subroutine: 固定资产申报|invalid
 cond=>condition: Yes
 or No?|approved:>http://www.google.com
 c2=>condition: Good idea|rejected
