--- a/equipa.html
+++ b/equipa.html
@@ -11,7 +11,7 @@
     </style>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="purchase/jsFiles/flowchart-latest.js"></script>
+    <script src="https://raw.githubusercontent.com/bnuzet/purchase/master/jsFiles/flowchart-latest.js"></script>
 <!--/ For flow chart-->
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
