--- a/equipa.html
+++ b/equipa.html
@@ -9,8 +9,8 @@
     <style type="text/css">
           .end-element { background-color : #FFCCFF; }
     </style>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://raw.githubusercontent.com/bnuzet/purchase/master/jsFiles/raphael-min.js"></script>
+    <script src="https://raw.githubusercontent.com/bnuzet/purchase/master/jsFiles/jquery.min.js"></script>
     <script src="https://raw.githubusercontent.com/bnuzet/purchase/master/jsFiles/flowchart-latest.js"></script>
 <!--/ For flow chart-->
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
