--- a/equipa.html
+++ b/equipa.html
@@ -86,8 +86,7 @@ e=>end: 结束:>http://www.google.com
 op1=>operation: 上竞价网|past
 op2=>operation: Stuff|current
 sub1=>subroutine: 固定资产申报|invalid
-cond=>condition: Yes
-or No?|approved:>http://www.google.com
+cond=>condition: 专用设备|approved:>http://www.google.com
 c2=>condition: Good idea|rejected
 io=>inputoutput: catch something...|request
 
