--- a/equipa.html
+++ b/equipa.html
@@ -62,7 +62,7 @@
                         'future' : { 'fill' : '#FFFF99'},
                         'request' : { 'fill' : 'blue'},
                         'invalid': {'fill' : '#444444'},
-                        'approved' : { 'fill' : '#58C4A3', 'font-size' : 12, 'yes-text' : 'APPROVED', 'no-text' : 'n/a' },
+                        'approved' : { 'fill' : '#58C4A3', 'font-size' : 12, 'yes-text' : '专用设备', 'no-text' : '通用设备' },
                         'rejected' : { 'fill' : '#C45879', 'font-size' : 12, 'yes-text' : 'n/a', 'no-text' : 'REJECTED' }
                       }
                     });
@@ -86,7 +86,7 @@ e=>end: 结束:>http://www.google.com
 op1=>operation: 上竞价网|past
 op2=>operation: Stuff|current
 sub1=>subroutine: 固定资产申报|invalid
-cond=>condition: 专用设备|approved:>http://www.google.com
+cond=>condition: 设备类型|approved:>http://www.google.com
 c2=>condition: Good idea|rejected
 io=>inputoutput: catch something...|request
 
