--- a/equipa.html
+++ b/equipa.html
@@ -83,7 +83,7 @@
       <div><textarea id="code" style="width: 100%;" rows="11">
 st=>start: [1.5, 30)万元设备的采购|past:>http://www.google.com[blank]
 e=>end: 结束:>http://www.google.com
-op1=>operation: 上竞价网|past
+op1=>operation: 上竞价网|past:>http://ztb.bnuz.edu.cn
 op2=>operation: Stuff|current
 sub1=>subroutine: 固定资产申报|invalid
 cond=>condition: 设备类型|approved:>http://www.google.com
