--- a/equipa.html
+++ b/equipa.html
@@ -87,7 +87,10 @@ op1=>operation: 上竞价网|past:>http://ztb.bnuz.edu.cn
 op2=>operation: Stuff|current
 sub1=>subroutine: 固定资产申报|invalid
 cond=>condition: 设备类型|approved:>http://www.google.com
+<!-- original content
 c2=>condition: Good idea|rejected
+-->
+op3=>operation:朝三暮四中|past
 io=>inputoutput: catch something...|request
 
 st->op1(right)->cond
