--- a/equipa.html
+++ b/equipa.html
@@ -88,10 +88,14 @@ op2=>operation: Stuff|current
 sub1=>subroutine: 固定资产申报|invalid
 cond=>condition: 设备类型|approved:>http://www.google.com
 op3=>operation: 专用设备亦可理解为竞价网上供应商较少甚至没有，则：
-直接挂足6天，以免再次申请延挂3天；线下自行找好供应商，采取自报价，
-即自行做好市场调研，拟定好真实成交商，将其报价自行登上竞价网，自
-报价可在截标前多次修改，截标后不可修改；
- |past
+1，直接挂足6天，以免再次申请延挂3天；
+2，线下自行找好供应商，采取自报价，即自行做好市场调研，拟定好真实
+成交商，将其报价自行登上竞价网，自报价可在截标前多次修改，截标后
+不可修改。
+若截标后，竞价数仍为0,则系统自动选择自报价供应商；若截标后，有其
+它供应商竞价，则系统按总价最低原则自动选择供应商，此时，若线下拟
+定自报价供应商价格高于线上竞价商10%以内，则可提供理由申请坚持要
+自报价供应商，可能获准通过。|past
 c2=>condition: Good idea|rejected
 io=>inputoutput: catch something...|request
 
