--- a/equipa.html
+++ b/equipa.html
@@ -62,8 +62,8 @@
                         'future' : { 'fill' : '#FFFF99'},
                         'request' : { 'fill' : 'blue'},
                         'invalid': {'fill' : '#444444'},
-                        'approved' : { 'fill' : '#58C4A3', 'font-size' : 10, 'yes-text' : '专用设备', 'no-text' : '通用设备' },
-                        'rejected' : { 'fill' : '#C45879', 'font-size' : 10, 'yes-text' : 'n/a', 'no-text' : 'REJECTED' }
+                        'approved' : { 'fill' : '#58C4A3', 'font-size' : 12, 'yes-text' : '专用设备','font-size' : 10 'no-text' : '通用设备' },
+                        'rejected' : { 'fill' : '#C45879', 'font-size' : 12, 'yes-text' : 'n/a', 'no-text' : 'REJECTED' }
                       }
                     });
                     $('[id^=sub1]').click(function(){
