--- a/equipa.html
+++ b/equipa.html
@@ -62,7 +62,7 @@
                         'future' : { 'fill' : '#FFFF99'},
                         'request' : { 'fill' : 'blue'},
                         'invalid': {'fill' : '#444444'},
-                        'approved' : { 'fill' : '#58C4A3', 'font-size' : 12, 'yes-text' : '专用设备','font-size' : 10 'no-text' : '通用设备' },
+                        'approved' : { 'fill' : '#58C4A3', 'font-size' : 12, 'yes-text' : '专用设备','font-size' : 10, 'no-text' : '通用设备' },
                         'rejected' : { 'fill' : '#C45879', 'font-size' : 12, 'yes-text' : 'n/a', 'no-text' : 'REJECTED' }
                       }
                     });
