--- a/equipa.html
+++ b/equipa.html
@@ -85,7 +85,7 @@
 e=>end: 结束:>http://www.google.com
 op1=>operation: 上竞价网|past:>http://ztb.bnuz.edu.cn
 op2=>operation: Stuff|current
-sub1=>subroutine: 固定资产申报|invalid
+sub1=>subroutine: 固定资产申报|past
 cond=>condition: 设备类型|approved:>http://www.google.com
 op3=>operation: 专用设备亦可理解为竞价网上供应商较少甚至没有，则：
 1，直接挂足6天，以免再次申请延挂3天；
