--- a/equipa.html
+++ b/equipa.html
@@ -80,7 +80,7 @@
 
     <section class="main-content">
       
-      <div><textarea id="code" style="width: 100%;" rows="15">
+      <div><textarea id="code" style="width: 100%; font-size:10pt;" rows="15">
       st=>start: [1.5, 30)万元设备的采购|past
 e=>end: 结束:>http://www.google.com
 op1=>operation: 上竞价网|past:>http://ztb.bnuz.edu.cn
