--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">采购流程指南</h1>
       <h2 class="project-tagline">&quot;Do not waste your time on routine that doesn't value it.&quot; </h2>
       <a href="https://github.com/bnuzet/purchase" class="btn">View on GitHub</a>
-      <a href="https://github.com/bnuzet/purchase/zipball/master" class="btn">[1.5, 30)万元设备的采购</a>
+      <a href="purchase/equipa.html" class="btn">[1.5, 15)万元设备的采购</a>
       <a href="https://github.com/bnuzet/purchase/tarball/master" class="btn">家具的采购</a>
     </section>
 
