--- a/固定资产购置申报表.html
+++ b/固定资产购置申报表.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>固定资产购置申报表的填写</title>
-<link rel="stylesheet" type="text/css" href="stylesheets/tableBNUZ.css">
+<link rel="stylesheet" type="text/css" href="tableBNUZ.css">
 </head>
 
 <body>
