--- a/equipa.html
+++ b/equipa.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><title>[1.5, 15)万元设备类的采购</title><link rel="stylesheet" href="markdown-plus-local.css"></head><body><article class="markdown-body"><h3 data-source-line="1">[1.5, 15)万元设备类采购</h3>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>[1.5, 15)万元设备类的采购</title><link rel="stylesheet" href="https://cdn.rawgit.com/tylingsoft/markdown-core/0.1.6/dist/css/markdown-core.css"></head><body><article class="markdown-body"><h3 data-source-line="1">[1.5, 15)万元设备类采购</h3>
 <div data-source-line="3" class="mermaid" data-processed="true"><svg id="mermaidChart20" xmlns="http://www.w3.org/2000/svg" height="100%" viewBox="0 0 1071 1268.1999969482422" style="max-width:1071px;"><style type="text/css" title="mermaid-svg-internal-css">/*  */
 #mermaidChart20 .node&gt;rect { ; }
 #mermaidChart20 .node text  { fill:#000; stroke:none; font-weight:300; font-family:"Helvetica Neue",Helvetica,Arial,sans-serf; font-size:14px; }
