--- a/purappro.html
+++ b/purappro.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>采购类合同审批表的填写</title>
-<link rel="stylesheet" type="text/css" href="tableBNUZpurappro.css">
+<link rel="stylesheet" type="text/css" href="stylesheets/tableBNUZpurappro.css">
 </head>
 
 <body>
