--- a/purappro.html
+++ b/purappro.html
@@ -42,7 +42,7 @@
       <td colspan="4" class="originallyFilled" id="fourSpannedRow2" scope="row">附件(请附上固定资产购置申报表，招标项目请附上中标通知书等)</td>
     </tr>
     <tr>
-      <td colspan="4" class="originallyFilled" id="fourSpannedRow6" scope="row"><div align="left">打开 新建 引入 另存 删除 重命名</div></td>
+      <td colspan="4" class="originallyFilled" id="ThreeSpannedRow6" scope="row"><div align="left">打开 新建 引入 另存 删除 重命名</div></td>
     </tr>
     <tr>
       <td colspan="4" class="toBeFilled"  id="ThreeSpannedRow" scope="row"><p align="left">(此处上传</p>
