--- a/equipa.html
+++ b/equipa.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Untitled Document</title>
+<meta content="text/html; charset=gb2312" http-equiv="Content-Type">
+<title>[1.5,15)万元设备的采购流程</title>
 </head>
 
 <body>
