--- a/equipa.html
+++ b/equipa.html
@@ -1,7 +1,8 @@
 <!doctype html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-CN" lang="zh-CN" >
 <head>
-<meta content="text/html; charset=gb2312" http-equiv="Content-Type">
+<meta content="text/html" http-equiv="Content-Type">
+<meta charset = "UTF-8">
 <title>[1.5,15)万元设备的采购流程</title>
 </head>
 
