--- a/equipa.html
+++ b/equipa.html
@@ -54,7 +54,7 @@
         <foreignObject style="overflow:visible;" pointer-events="all" width="72" height="12" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
           <div xmlns="http://www.w3.org/1999/xhtml" style="display: inline-block; font-size: 12px; font-family: Helvetica,宋体,Arial Narrow; color: rgb(0, 0, 0); line-height: 1.2; vertical-align: top; width: 73px; white-space: nowrap; text-align: center;">
             <div xmlns="http://www.w3.org/1999/xhtml" style="display:inline-block;text-align:inherit;text-decoration:inherit;">
-              <u xmlns="http://www.w3.org/1999/xhtml">銝??隞瑞凎蝡蘿遠
+              <u xmlns="http://www.w3.org/1999/xhtml">one
               </u>
             </div>
           </div>
@@ -72,7 +72,7 @@
       <foreignObject style="overflow:visible;" pointer-events="all" width="116" height="26" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
         <div xmlns="http://www.w3.org/1999/xhtml" style="display: inline-block; font-size: 12px; font-family: Helvetica,宋体,Arial Narrow; color: rgb(0, 0, 0); line-height: 1.2; vertical-align: top; width: 116px; white-space: normal; text-align: center;">
           <div xmlns="http://www.w3.org/1999/xhtml" style="display:inline-block;text-align:inherit;text-decoration:inherit;">
-            <div xmlns="http://www.w3.org/1999/xhtml" style="text-align: left">OA蝟餌?憛?幮箏?韏?漣?單?銵
+            <div xmlns="http://www.w3.org/1999/xhtml" style="text-align: left">one
             </div>
           </div>
         </div>
