--- a/equipa.html
+++ b/equipa.html
@@ -59,7 +59,7 @@
             </div>
           </div>
         </foreignObject>
-        <text x="36" y="12" fill="#000000" text-anchor="middle" font-size="12px" font-family="宋体">[Not supported by viewer]
+        <text x="36" y="12" fill="#000000" text-anchor="middle" font-size="12px" font-family="宋体">one
         </text>
       </switch>
     </g>
@@ -72,12 +72,12 @@
       <foreignObject style="overflow:visible;" pointer-events="all" width="116" height="26" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
         <div xmlns="http://www.w3.org/1999/xhtml" style="display: inline-block; font-size: 12px; font-family: Helvetica,宋体,Arial Narrow; color: rgb(0, 0, 0); line-height: 1.2; vertical-align: top; width: 116px; white-space: normal; text-align: center;">
           <div xmlns="http://www.w3.org/1999/xhtml" style="display:inline-block;text-align:inherit;text-decoration:inherit;">
-            <div xmlns="http://www.w3.org/1999/xhtml" style="text-align: left">one
+            <div xmlns="http://www.w3.org/1999/xhtml" style="text-align: left">two
             </div>
           </div>
         </div>
       </foreignObject>
-      <text x="58" y="19" fill="#000000" text-anchor="middle" font-size="12px" font-family="Helvetica">[Not supported by viewer]
+      <text x="58" y="19" fill="#000000" text-anchor="middle" font-size="12px" font-family="Helvetica">two
       </text>
     </switch>
   </g>
