--- a/equipa1.html
+++ b/equipa1.html
@@ -151,7 +151,9 @@
           </div>
         </div>
       </foreignObject>
-      <text x="58" y="19" fill="#000000" text-anchor="middle" font-size="12px" font-family="宋体">一般挂满3天以上且竞价数不为0即可
+      <text x="58" y="19" fill="#000000" text-anchor="middle" font-size="12px" font-family="宋体" >
+		 <tspan x="58" y="7">一般挂满3天以上 </tspan> 
+		 <tspan x="58" y="23">且竞价数不为0即可 </tspan>
       </text>
     </switch>
   </g>
@@ -169,7 +171,7 @@
           </div>
         </div>
       </foreignObject>
-      <text x="38" y="20" fill="#000000" text-anchor="middle" font-size="12px" font-family="Helvetica">[Not supported by viewer]
+      <text x="38" y="20" fill="#000000" text-anchor="middle" font-size="10px" font-family="宋体">通用设备（如电脑等）
       </text>
     </switch>
   </g>
@@ -209,7 +211,12 @@
           </div>
         </div>
       </foreignObject>
-      <text x="156" y="52" fill="#000000" text-anchor="middle" font-size="12px" font-family="宋体">若截标后,竞价数仍为0,则系统自动选择自报价供应商
+      <text x="156" y="52" fill="#000000" text-anchor="middle" font-size="12px" font-family="宋体">
+		 <tspan x="156" y="16">1.若截标后,竞价数仍为0,则系统自动选择自报价供应商 </tspan> 
+		 <tspan x="156" y="32">2.若截标后,有其它供应商竞价,则系统按总价最低原则: </tspan>
+		 <tspan x="156" y="48">  &nbsp;自动选择供应商,此时,若线下拟定自报价供应商价格 </tspan>
+		 <tspan x="156" y="64">高于线上竞价商10%以内,则可提供理由申请坚持要 </tspan>
+		 <tspan x="156" y="80">自报价供应商,可能获准通过 </tspan>
       </text>
     </switch>
   </g>
@@ -241,7 +248,9 @@
           </div>
         </div>
       </foreignObject>
-      <text x="93" y="26" fill="#000000" text-anchor="middle" font-size="12px" font-family="Helvetica">[Not supported by viewer]
+      <text x="93" y="26" fill="#000000" text-anchor="middle" font-size="12px" font-family="宋体">
+		<tspan x="93" y="14">系统自动按总价最低原则选择供应 </tspan> 
+		 <tspan x="93" y="30">商,管理员初审通过后顺利发货等 </tspan>
       </text>
     </switch>
   </g>
