--- a/equipa1.html
+++ b/equipa1.html
@@ -4,20 +4,30 @@
 <meta content="text/html" http-equiv="Content-Type">
 <meta charset = "UTF-8">
 <title>[1.5,15)万元设备的采购流程</title>
+<script>
+var browserWidth = document.documentElement.clientWidth;
+var middleInBrowser = 0.5*browserWidth;
+</script>
+</head>
 <body>
 
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="773px" height="1005px" version="1.1" style="background-color: rgb(255, 255, 255);">
-  <defs/>
-  <g transform="translate(0.5,0.5)">
+	<defs>
+        <linearGradient id="MyGradient">
+            <stop offset="3%"  stop-color="#559EE8"/>
+            <stop offset="97%" stop-color="#75ECB0"/>
+        </linearGradient>
+    </defs>
+  <g transform="translate(middleInBrowser, 12)">
     <path d="M 126 296 L 106 296 L 106 372.63" fill="none" stroke="#000000" stroke-miterlimit="10" pointer-events="none"/>
     <path d="M 106 377.88 L 102.5 370.88 L 106 372.63 L 109.5 370.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10" pointer-events="none"/>
     <path d="M 311 71 L 311 94.63" fill="none" stroke="#000000" stroke-miterlimit="10" pointer-events="none"/>
     <path d="M 311 99.88 L 307.5 92.88 L 311 94.63 L 314.5 92.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10" pointer-events="none"/>
-    <ellipse cx="311" cy="36" rx="75" ry="35" fill="#ededed" stroke="#ffffff" pointer-events="none"/>
+    <ellipse cx="311" cy="36" rx="75" ry="35" fill="url(#MyGradient)" stroke="#ffffff" pointer-events="none" />
     <g transform="translate(255,30)">
       <switch>
         <foreignObject style="overflow:visible;" pointer-events="all" width="113" height="12" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
-          <div xmlns="http://www.w3.org/1999/xhtml" style="display: inline-block; font-size: 12px; font-family: Helvetica,宋体,Arial Narrow; color: rgb(0, 0, 0); line-height: 1.2; vertical-align: top; width: 114px; white-space: nowrap; text-align: center;">
+          <div xmlns="http://www.w3.org/1999/xhtml" style="display: inline-block; font-size: 12px; font-family: Helvetica,宋体,Arial Narrow; line-height: 1.2; vertical-align: top; width: 114px; white-space: nowrap; text-align: center;">
             <div xmlns="http://www.w3.org/1999/xhtml" style="display:inline-block;text-align:inherit;text-decoration:inherit;">
               <b xmlns="http://www.w3.org/1999/xhtml">采购[1.5,15)万元设备</b>
             </div>
@@ -33,11 +43,11 @@
     <path d="M 191 169.88 L 187.5 162.88 L 191 164.63 L 194.5 162.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10" pointer-events="none"/>
     <path d="M 371 126 L 661 126 L 661 544.63" fill="none" stroke="#000000" stroke-miterlimit="10" pointer-events="none"/>
     <path d="M 661 549.88 L 657.5 542.88 L 661 544.63 L 664.5 542.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10" pointer-events="none"/>
-    <path d="M 281 101 L 341 101 L 371 126 L 341 151 L 281 151 L 251 126 Z" fill="#ededed" stroke="#ffffff" stroke-miterlimit="10" pointer-events="none"/>
-    <g transform="translate(287,120)">
+    <path d="M 281 101 L 341 101 L 371 126 L 341 151 L 281 151 L 251 126 Z" fill="url(#MyGradient)" stroke="#ffffff" stroke-miterlimit="10" pointer-events="none"/>
+    <g transform="translate(287,120)"  >
       <switch>
         <foreignObject style="overflow:visible;" pointer-events="all" width="48" height="12" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
-          <div xmlns="http://www.w3.org/1999/xhtml" style="display: inline-block; font-size: 12px; font-family: Helvetica,宋体,Arial Narrow; color: rgb(0, 0, 0); line-height: 1.2; vertical-align: top; width: 49px; white-space: nowrap; text-align: center;">
+          <div xmlns="http://www.w3.org/1999/xhtml"  style="display: inline-block; font-size: 12px; font-family: Helvetica,宋体,Arial Narrow;color: rgb(0, 0, 0); line-height: 1.2; vertical-align: top; width: 49px; white-space: nowrap; text-align: center;">
             <div xmlns="http://www.w3.org/1999/xhtml" style="display:inline-block;text-align:inherit;text-decoration:inherit;">同时进行
             </div>
           </div>
@@ -48,7 +58,7 @@
     </g>
     <path d="M 191 231 L 191 264.63" fill="none" stroke="#000000" stroke-miterlimit="10" pointer-events="none"/>
     <path d="M 191 269.88 L 187.5 262.88 L 191 264.63 L 194.5 262.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10" pointer-events="none"/>
-    <a xlink:href="http://jjw.bnuz.edu.cn:8088/bid/"><rect x="131" y="171" width="120" height="60" fill="#ededed" stroke="#ffffff"/>
+    <a xlink:href="http://jjw.bnuz.edu.cn:8088/bid/"><rect x="131" y="171" width="120" height="60" fill="url(#MyGradient)" stroke="#ffffff"/>
     <g transform="translate(155,195)">
       <switch>
         <foreignObject style="overflow:visible;" pointer-events="all" width="72" height="12" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
@@ -66,7 +76,7 @@
   </a>
   <path d="M 661 611 L 661 651 L 624 651 L 624 684.63" fill="none" stroke="#000000" stroke-miterlimit="10"/>
   <path d="M 624 689.88 L 620.5 682.88 L 624 684.63 L 627.5 682.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10"/>
-  <rect x="601" y="551" width="120" height="60" fill="#ededed" stroke="#ffffff"/>
+  <rect x="601" y="551" width="120" height="60" fill="url(#MyGradient)" stroke="#ffffff"/>
   <g transform="translate(603,568)">
     <switch>
       <foreignObject style="overflow:visible;" pointer-events="all" width="116" height="26" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
@@ -83,7 +93,7 @@
   </g>
   <path d="M 256 296 L 476 296 L 476 374.63" fill="none" stroke="#000000" stroke-miterlimit="10"/>
   <path d="M 476 379.88 L 472.5 372.88 L 476 374.63 L 479.5 372.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10"/>
-  <path d="M 191 271 L 256 296 L 191 321 L 126 296 Z" fill="#ededed" stroke="#ffffff" stroke-miterlimit="10"/>
+  <path d="M 191 271 L 256 296 L 191 321 L 126 296 Z" fill="url(#MyGradient)" stroke="#ffffff" stroke-miterlimit="10"/>
   <g transform="translate(167,290)">
     <switch>
       <foreignObject style="overflow:visible;" pointer-events="all" width="48" height="12" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
@@ -98,7 +108,7 @@
   </g>
   <path d="M 171 481 L 171 534.63" fill="none" stroke="#000000" stroke-miterlimit="10"/>
   <path d="M 171 539.88 L 167.5 532.88 L 171 534.63 L 174.5 532.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10"/>
-  <rect x="1" y="381" width="340" height="100" fill="#ededed" stroke="#ffffff"/>
+  <rect x="1" y="381" width="340" height="100" fill="url(#MyGradient)" stroke="#ffffff"/>
   <g transform="translate(3,385)">
     <switch>
       <foreignObject style="overflow:visible;" pointer-events="all" width="336" height="92" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
@@ -111,7 +121,7 @@
                 <li>直接挂足6天,以免再次申请延挂3天
                 <br />
                 </li>
-                <li>研,拟定好真实成交商,将其报价自行登上竞价网,线下自行找好供应商,采取自报价,即自行做好市场调研，自报价可在截标前多次修改,截标后不可修改
+                <li>自行在线下做好调研,拟定好真实成交商,将其报价自行登上竞价网,线下自行找好供应商,采取自报价,即自行做好市场调研，自报价可在截标前多次修改,截标后不可修改
                 <br />
                 </li>
               </ol>
@@ -119,7 +129,12 @@
           </div>
         </div>
       </foreignObject>
-      <text x="168" y="52" fill="#000000" text-anchor="middle" font-size="12px" font-family="宋体">专用设备亦可理解为竞价网上供应商较少甚至没有，则：
+      <text x="168" y="52" fill="#000000" text-anchor="middle" font-size="12px" font-family="宋体">
+		<tspan x="168" y="20">专用设备亦可理解为竞价网上供应商较少甚至没有，则： </tspan> 
+		<tspan x="168" y="36">1.直接挂足6天,以免再次申请延挂3天 </tspan>
+		<tspan x="168" y="52">2.自行在线下做好调研,拟定好真实成交商,将其报价自行登上 </tspan>
+		<tspan x="168" y="68">竞价网,线下自行找好供应商,采取自报价,即自行做好市场 </tspan>
+		<tspan x="168" y="84">调研,自报价可在截标前多次修改,截标后不可修改 </tspan>
       </text>
     </switch>
   </g>
@@ -129,18 +144,18 @@
       <foreignObject style="overflow:visible;" pointer-events="all" width="45" height="12" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
         <div xmlns="http://www.w3.org/1999/xhtml" style="display: inline-block; font-size: 10px; font-family: Helvetica,宋体,Arial Narrow; color: rgb(0, 0, 0); line-height: 1.2; vertical-align: top; overflow: hidden; max-height: 16px; max-width: 51px; width: 51px; white-space: normal; text-align: center;">
           <div xmlns="http://www.w3.org/1999/xhtml" style="display:inline-block;text-align:inherit;text-decoration:inherit;">
-            <font xmlns="http://www.w3.org/1999/xhtml" style="font-size: 10px">专用设备
+            <font xmlns="http://www.w3.org/1999/xhtml" style="font-size: 11px">专用设备
             </font>
           </div>
         </div>
       </foreignObject>
-      <text x="20" y="12" fill="#000000" text-anchor="middle" font-size="10px" font-family="宋体">专用设备
+      <text x="20" y="12" fill="#000000" text-anchor="middle" font-size="11px" font-family="宋体">专用设备
       </text>
     </switch>
   </g>
   <path d="M 476 421 L 476 474.63" fill="none" stroke="#000000" stroke-miterlimit="10"/>
   <path d="M 476 479.88 L 472.5 472.88 L 476 474.63 L 479.5 472.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10"/>
-  <rect x="416" y="381" width="120" height="40" fill="#ededed" stroke="#ffffff"/>
+  <rect x="416" y="381" width="120" height="40" fill="url(#MyGradient)" stroke="#ffffff"/>
   <g transform="translate(418,388)">
     <switch>
       <foreignObject style="overflow:visible;" pointer-events="all" width="116" height="26" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
@@ -163,7 +178,7 @@
       <foreignObject style="overflow:visible;" pointer-events="all" width="75" height="27" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
         <div xmlns="http://www.w3.org/1999/xhtml" style="display: inline-block; font-size: 12px; font-family: Helvetica,宋体,Arial Narrow; color: rgb(0, 0, 0); line-height: 1.2; vertical-align: top; overflow: hidden; max-height: 27px; max-width: 75px; width: 75px; white-space: normal; text-align: center;">
           <div xmlns="http://www.w3.org/1999/xhtml" style="display:inline-block;text-align:inherit;text-decoration:inherit;">
-            <font xmlns="http://www.w3.org/1999/xhtml" style="font-size: 10px">通用设备（如电脑等）
+            <font xmlns="http://www.w3.org/1999/xhtml" style="font-size: 11px">通用设备（如电脑等）
             </font>
             <div xmlns="http://www.w3.org/1999/xhtml">
               <br />
@@ -171,13 +186,13 @@
           </div>
         </div>
       </foreignObject>
-      <text x="38" y="20" fill="#000000" text-anchor="middle" font-size="10px" font-family="宋体">通用设备（如电脑等）
+      <text x="38" y="20" fill="#000000" text-anchor="middle" font-size="11px" font-family="宋体">通用设备（如电脑等）
       </text>
     </switch>
   </g>
   <path d="M 256 631 L 256 661 L 329 661 L 329 684.63" fill="none" stroke="#000000" stroke-miterlimit="10"/>
   <path d="M 329 689.88 L 325.5 682.88 L 329 684.63 L 332.5 682.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10"/>
-  <rect x="1" y="541" width="340" height="90" fill="#ededed" stroke="#ffffff"/>
+  <rect x="1" y="541" width="340" height="90" fill="url(#MyGradient)" stroke="#ffffff"/>
   <g transform="translate(16,540)">
     <switch>
       <foreignObject style="overflow:visible;" pointer-events="all" width="311" height="92" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
@@ -237,7 +252,7 @@
   </g>
   <path d="M 476 531 L 476 684.63" fill="none" stroke="#000000" stroke-miterlimit="10"/>
   <path d="M 476 689.88 L 472.5 682.88 L 476 684.63 L 479.5 682.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10"/>
-  <rect x="381" y="481" width="190" height="50" fill="#ededed" stroke="#ffffff"/>
+  <rect x="381" y="481" width="190" height="50" fill="url(#MyGradient)" stroke="#ffffff"/>
   <g transform="translate(383,486)">
     <switch>
       <foreignObject style="overflow:visible;" pointer-events="all" width="186" height="40" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
@@ -256,7 +271,7 @@
   </g>
   <path d="M 476 731 L 476 752.63" fill="none" stroke="#000000" stroke-miterlimit="10"/>
   <path d="M 476 757.88 L 472.5 750.88 L 476 752.63 L 479.5 750.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10"/>
-  <rect x="181" y="691" width="590" height="40" fill="#ededed" stroke="#ffffff"/>
+  <rect x="181" y="691" width="590" height="40" fill="url(#MyGradient)" stroke="#ffffff"/>
   <g transform="translate(396,705)">
     <switch>
       <foreignObject style="overflow:visible;" pointer-events="all" width="161" height="12" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
@@ -275,7 +290,7 @@
   <path d="M 476 731 L 476 731 L 476 731 L 476 731 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10"/>
   <path d="M 476 799 L 476 823.63" fill="none" stroke="#000000" stroke-miterlimit="10"/>
   <path d="M 476 828.88 L 472.5 821.88 L 476 823.63 L 479.5 821.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10"/>
-  <rect x="393" y="759" width="165" height="40" fill="#ededed" stroke="#ffffff"/>
+  <rect x="393" y="759" width="165" height="40" fill="url(#MyGradient)" stroke="#ffffff"/>
   <g transform="translate(398,773)">
     <switch>
       <foreignObject style="overflow:visible;" pointer-events="all" width="156" height="12" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
@@ -292,7 +307,7 @@
   </g>
   <path d="M 476 870 L 477 870 L 477 884.63" fill="none" stroke="#000000" stroke-miterlimit="10"/>
   <path d="M 477 889.88 L 473.5 882.88 L 477 884.63 L 480.5 882.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10"/>
-  <rect x="393" y="830" width="165" height="40" fill="#ededed" stroke="#ffffff"/>
+  <rect x="393" y="830" width="165" height="40" fill="url(#MyGradient)" stroke="#ffffff"/>
   <g transform="translate(404,844)"><switch><foreignObject style="overflow:visible;" pointer-events="all" width="144" height="12" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
     <div xmlns="http://www.w3.org/1999/xhtml" style="display: inline-block; font-size: 12px; font-family: Helvetica,宋体,Arial Narrow; color: rgb(0, 0, 0); line-height: 1.2; vertical-align: top; width: 145px; white-space: nowrap; text-align: center;">
       <div xmlns="http://www.w3.org/1999/xhtml" style="display:inline-block;text-align:inherit;text-decoration:inherit;">
@@ -307,7 +322,7 @@
 </g>
 <path d="M 477 931 L 477 951 L 477 933 L 477 946.63" fill="none" stroke="#000000" stroke-miterlimit="10"/>
 <path d="M 477 951.88 L 473.5 944.88 L 477 946.63 L 480.5 944.88 Z" fill="#000000" stroke="#000000" stroke-miterlimit="10"/>
-<rect x="394" y="891" width="165" height="40" fill="#ededed" stroke="#ffffff"/><g transform="translate(453,905)">
+<rect x="394" y="891" width="165" height="40" fill="url(#MyGradient)" stroke="#ffffff"/><g transform="translate(453,905)">
   <switch>
     <foreignObject style="overflow:visible;" pointer-events="all" width="48" height="12" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
       <div xmlns="http://www.w3.org/1999/xhtml" style="display: inline-block; font-size: 12px; font-family: Helvetica,摰??,Arial Narrow; color: rgb(0, 0, 0); line-height: 1.2; vertical-align: top; width: 49px; white-space: nowrap; text-align: center;">
@@ -321,7 +336,7 @@
 	</text>
   </switch>
 </g>
-<ellipse cx="477" cy="978" rx="46" ry="25" fill="#ededed" stroke="#ffffff"/>
+<ellipse cx="477" cy="978" rx="46" ry="25" fill="url(#MyGradient)" stroke="#ffffff"/>
 	<g transform="translate(465,972)">
 	  <switch>
 		<foreignObject style="overflow:visible;" pointer-events="all" width="24" height="12" requiredFeatures="http://www.w3.org/TR/SVG11/feature#Extensibility">
